force-app/main/default/objects/Invoice_Line_Item__c/fields/Unit_price__c.field-meta.xml
<CustomField>
    <fullName>Unit_price__c</fullName>
    <label>Unit price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>